styles.css
@font-face {
    font-family: "Libre Baskerville";
    src: url("fonts/LibreBaskerville-Regular.ttf");
}

.icons {
    padding: 0 12px;
}

.action-list-2 span {
    position: relative;
    font-size: 17px;
    overflow: hidden;
    vertical-align: middle;
    display: inline-block;
    box-sizing: border-box;
}

.action-list-2 a {
    display: inline-block;
    text-decoration: none;
}

.nav-wrapper {
    height: 64px;
}

.nav-wrapper .nav {
    height: 64px;
    width: 100%;
    position: relative;
}

.nav-wrapper .nav.fixed {
    position: fixed;
    z-index: 10000;
    top: 0;
    left: 0;
    right: 0;
}

#nav {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    white-space: nowrap;
    align-items: center;
    padding: 0 66px 0 66px;
    top: 0;
    left: 0;
    position: fixed;
    box-sizing: border-box;
    width: inherit;
    text-align: center;
    background-color: white;
    box-shadow: 0 0 5px grey;
    height: inherit;
}

.nav div {
    padding: 0 14px;
    flex-grow: 1;
    flex-shrink: 0;
}

#PageTitle {
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0 20px;
    position: relative;
    flex: 1;
}

#PageTitle a {
    text-decoration: none;
    font-family: "Libre Baskerville", serif;
    font-weight: 700;
}

#sitewrapper {
    padding: 0 80px 0 80px;
}

.wholepage {
    padding-top: 64px;
}

.header-panel {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-bottom: 128px;
}


.header-panel div {
    width: 100%;
}

.opening-hours {
    margin-bottom: 24px;
}

.header-quote a {
    background-color: rgb(72, 72, 127);
    padding: 18px 54px;
    display: inline-block;
    color: white;
    text-decoration: none;
}

#hamburger {
    padding: 15px;
    flex-grow: 0;
    flex-shrink: 1;
}

#Handy-title {
    margin-bottom: 16px;
}

.upper-header {
    margin-bottom: 80px;
    margin-top: 80px;
}

#Handy-title>span {
    font-family: "Libre Baskerville", serif;
    font-size: 56px;
    font-weight: 700;
}

@media screen and (max-width: 640px) {
    div.action-list-2 {
        display: none;
    }

    #nav {
        justify-content: left;
        padding: 0 12px 0 12px;
        text-align: left;
    }

    #sitewrapper {
        padding: 0 0 56px 0;
    }
}

#header-image {
    order: 2;

}

img {
    overflow: clip;
    object-fit: cover;
    width: 100%;
}

#header-image * {
    display: inline-block;
}

#email {
    word-wrap: break-word;
    padding: 5px;
}

address {
    font-size: 20px;
}

* {
    margin: 0;
    line-height: 1.5em;
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    color: rgb(72, 72, 127);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-tap-highlight-color: transparent;
    text-size-adjust: 100%;
}

